syntax = "proto3";

package common;
import "common/types.proto";
import "google/protobuf/timestamp.proto";

option java_package = "com.hackathonhub.common.grpc";

enum RoleEnum {
  ROLE_USER = 0;
  ROLE_ADMIN = 1;
}

message User {
  UUID id = 1;
  string username = 2;
  string full_name = 3;
  string email = 4;
  string password = 5;
  bool is_activated = 6;
  repeated Role roles = 8;
}

message Role {
  UUID id = 1;
  RoleEnum role = 2;
}

message AuthTokens {
  UUID id = 1;
  UUID user_id = 2;
  string access_token = 3;
  string refresh_token = 4;
  google.protobuf.Timestamp created_at = 5;
}

message Team {
  UUID id = 1;
  string name = 2;
  string description = 3;
  UUID founder_id = 4;
  google.protobuf.Timestamp created_at = 5;
}
